syntax = "proto3";
package fusion.scheduler.grpc;

import "fusion/scheduler/model/scheduler.proto";
import "fusion/define.proto";

service SchedulerService {
    // 创建作业并设置调度
    rpc CreateJob (fusion.scheduler.model.JobDTO) returns (fusion.scheduler.model.JobBO) {
    }

    // 取消作业调度
    rpc CancelJob (fusion.scheduler.model.JobCancelDTO) returns (fusion.ResultBO) {
    }

    // 暂停作业调度
    rpc PauseJob (fusion.scheduler.model.JobPauseDTO) returns (fusion.ResultBO) {
    }

    // 恢复作业调度
    rpc ResumeJob (fusion.scheduler.model.JobResumeDTO) returns (fusion.ResultBO) {
    }

    // 获取作业和作业关联的所有调度
    rpc GetJob (fusion.scheduler.model.Key) returns (fusion.scheduler.model.JobBO) {
    }
}